Fixed rubber-banding on iOS

--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
+body, html, #app { 
+  width: 100%;
+  height: 100%;
+  /* position: fixed; */
+  overflow: hidden;
+}
+
 html {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 body {
-	background-color: #000;
-	margin: 0px;
-	overflow: hidden;
-  width: 100%;
-  height: 100%;
+background-color: red;
+margin: 0px;
 }
 
 .controls {
@@ -50,6 +54,18 @@ body {
   border-radius: 8px 8px 0px 0px;
   z-index: 6;
   cursor: move;
+}
+
+.miniAxisButton{
+  height: 20px;
+  width: auto;
+  background-color: black;
+  border-radius: 16px;
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  color: white;
+  padding: 4px 8px;
 }
 
 #undo {
@@ -124,10 +140,15 @@ body {
 }
 
 #mirror {
+  width: 165px;
+  height: 30px;
+  padding: 0px 10px;
+  padding-top: 8px;
   color: white;
   position: absolute;
   top: 0;
-  left:0;
+  left: calc(50% - 100px);
   background-color: black;
   z-index: 6;
+  border-radius: 0 0 16px 16px;
 }
